--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>WRVC - video chat</title>
+  <style>
+    .room-header {
+      width: 100%;
+      height: 40px;
+      background-color: #15c8ff;
+      display: flex;
+      align-items: center;
+      position: fixed;
+      justify-content: space-evenly;
+      color: #005f7c;
+      top: 0px;
+    }
+  </style>
 </head>
 
 <body>
